src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Franchise</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Locations__c</fullName>
        <label>No. of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>merchant category</description>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>National (&gt;$1B Annual Revenue)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional (&gt;$20M Annual Revenue)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop n Give</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sip to Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gifting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zoho_Lead_Id__c</fullName>
        <externalId>true</externalId>
        <label>Zoho Lead Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoho_Lead_Owner_Id__c</fullName>
        <label>Zoho Lead Owner Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category_c__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attractions / Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Box Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Christina_T_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>cturk</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted,Open,Qualified,Unqualified</value>
        </filters>
        <label>Christina T Leads</label>
    </listViews>
    <listViews>
        <fullName>Mari_B_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mbent</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted,Open,Qualified,Unqualified</value>
        </filters>
        <label>Mari B Leads</label>
    </listViews>
    <listViews>
        <fullName>Mark_P_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mprus</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted,Open,Qualified,Unqualified</value>
        </filters>
        <label>Mark P Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Omri_D_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>odaha</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted,Open,Qualified,Unqualified</value>
        </filters>
        <label>Omri D Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>Vic_T</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>vtort</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted,Open,Qualified,Unqualified</value>
        </filters>
        <label>Vic T Leads</label>
    </listViews>
    <validationRules>
        <fullName>Fill_Category_field</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(category_c__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>category_c__c</errorDisplayField>
        <errorMessage>Fill Category value</errorMessage>
    </validationRules>
</CustomObject>